<resources>
    <string name="app_name">e-Zakat</string>
    <string name="copyright">Copyright &#169; 2022 Insyirah</string>
    <string name="group_text">Group : RCS2405B</string>
    <string name="matric_text">Matric Number : 2020483304</string>
    <string name="code_text">Programme Code : CS240</string>
    <string name="about">
        E-Zakat application is an app that calculate the amount zakat that the user need to pay.
        Zakat must be paid on 2.5% of the value of the gold that you own.
        This app will show whether the user is eligible to pay zakat or not.
    </string>
    <string name="hyperlink">Please click on <a href="https://github.com/SchezShier/Assignment1.git"> this link</a> to view the source code</string>
</resources>